--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <use xlink:href="img/sprite.svg#icon-global"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">
-                    World's best luxury homes
+                    Global Market
                 </h4>
                 <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.
                 </p>
@@ -90,7 +90,7 @@
                     <use xlink:href="img/sprite.svg#icon-trophy"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">
-                    Only the best properties
+                    Perfect properties
                 </h4>
                 <p class="feature__text">Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut quia.                    
                 </p>
@@ -101,7 +101,7 @@
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">
-                    All homes in top locations
+                    Top locations
                 </h4>
                 <p class="feature__text">Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.
                 </p>
@@ -112,7 +112,7 @@
                     <use xlink:href="img/sprite.svg#icon-key"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">
-                    New home in one week
+                    One week move-in 
                 </h4>
                 <p class="feature__text">Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 </p>
